methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:5: error: not enough arguments for method isFacingTrail: (Couleur: java.awt.Color)Boolean.
Unspecified value parameter Couleur.
  if (isFacingTrail()) avance()
                   ^SlugSnail:7: error: not enough arguments for method isFacingTrail: (Couleur: java.awt.Color)Boolean.
Unspecified value parameter Couleur.
       if (isFacingTrail()) avance()
                        ^